# birkin_coding_tools

./: AGENTS.md  README.md  dj_logging_only_settings.py  logging_info.py  main.py  pyproject.toml
script_project/: AGENTS.md  README.md  main.py  pyproject.toml  run_tests.py
script_project/tests/: test.py
